Fix wrong colour applied to selected button icons
Fixes jesseweed/seti-syntax#152.

--- a/styles/components/find-replace.less
+++ b/styles/components/find-replace.less
@@ -38,6 +38,10 @@
         background-color: lighten(@bad, 10%);
       }
     }
+    .btn.selected > .icon {
+      fill: @white;
+      stroke: @white;
+    }
   }
 
 }
