--- a/styles/user-theme.less
+++ b/styles/user-theme.less
@@ -1,1 +1,1 @@
-@seti-primary: @purple;@seti-primary-text: @purple-text;@seti-primary-highlight: @purple-highlight;
+@seti-primary: @blue;@seti-primary-text: @blue-text;@seti-primary-highlight: @blue-highlight;
